Add CI workflow for linting and formatting, and configure pre-commit hooks

--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
 	},
 	"contributes": {},
 	"scripts": {
-		"lint": "lint-staged"
+		"lint": "bunx biome check --apply-unsafe",
+		"format": "bunx biome format --write --files-ignore-unknown=true"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
-		"lint-staged": "^15.2.10"
-	},
-	"lint-staged": {
-		"*.{ts,js}": "bunx biome check --apply-unsafe",
-		"**/*": "bunx biome format --write --files-ignore-unknown=true"
+		"biome": "^0.3.3",
+		"husky": "^9.1.7"
 	}
 }
