--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Lint and Format
+name: Test
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
       - "feature/*"
 
 jobs:
-  lint-format:
+  test:
     runs-on: ubuntu-latest
 
     steps:
@@ -26,8 +26,5 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Lint with Biome
-        run: bun run lint
-
-      - name: Format with Biome
-        run: bun run format
+      - name: Test
+        run: bun test
