Rename CI workflow from "Test" to "CI Pipeline" and update test job name to "Run tests"

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Test
+name: CI Pipeline
 
 on:
   push:
@@ -26,5 +26,5 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Test
+      - name: Run tests
         run: bun test
