Update CI workflow to source Bun environment in GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,9 @@ jobs:
       - name: Install Bun
         run: |
           curl -fsSL https://bun.sh/install | bash
-          export PATH="$HOME/.bun/bin:$PATH"
+
+      - name: Source Bun environment
+        run: echo 'PATH=$HOME/.bun/bin:$PATH' >> $GITHUB_ENV
 
       - name: Install dependencies
         run: bun install
