Update CI workflow to set Bun environment variables directly in the install and test steps

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,10 @@ jobs:
 
       - name: Install dependencies
         run: |
-          echo 'PATH=$HOME/.bun/bin:$PATH' >> $GITHUB_ENV
-          source $GITHUB_ENV
+          export PATH=$HOME/.bun/bin:$PATH
           bun install
 
       - name: Run tests
         run: |
-          source $GITHUB_ENV
+          export PATH=$HOME/.bun/bin:$PATH
           bun test
