--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -1,9 +1,9 @@
 {
-	"compilerOptions": {
-		"strict": true,
-		"jsx": "react-jsx",
-		"jsxImportSource": "hono/jsx"
-	},
-	"include": ["server/**/*.ts", "tsconfig.json"],
-	"exclude": ["node_modules", "build"]
+  "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "strict": true,
+    "jsx": "react-jsx",
+    "jsxImportSource": "hono/jsx"
+  },
+  "include": ["server/**/*.ts"]
 }
