--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,10 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
-			"recommended": true
+			"recommended": true,
+			"suspicious": {
+				"noExplicitAny": "info"
+			}
 		}
 	},
 	"formatter": {
@@ -21,7 +24,9 @@
 			"*.lockb",
 			"node_modules/*",
 			".husky/*",
-			".github/*"
+			".github/*",
+			".astro/*",
+			".env*"
 		]
 	},
 	"javascript": {
