--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
 		"astro:client": "bunx --bun astro --config tsconfig.client.json"
 	},
 	"dependencies": {
+		"@hono/sentry": "^1.2.0",
 		"astro": "^5.0.1",
 		"hono": "^4.6.12",
 		"pino": "^9.5.0",
 		"pino-pretty": "^13.0.0",
-		"zod": "^3.23.8"
+		"zod": "^3.23.8",
+		"zod-validation-error": "^3.4.0"
 	},
 	"devDependencies": {
 		"@types/bun": "latest",
