--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "decoded-daily",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"license": "XAG-1 Private Software License",
 	"author": {
 		"name": "xArcGit"
@@ -8,30 +8,29 @@
 	"contributes": {},
 	"type": "module",
 	"scripts": {
+		"dev": "bun run client:dev & bun run server:dev",
+		"build": "bun run client:build & bun run server:build",
 		"lint": "bunx biome check --apply-unsafe",
 		"format": "bunx biome format --write --files-ignore-unknown=true",
-		"dev": "bun run dev:client & bun run dev:server",
-		"build": "bun run build:server & bun run build:client",
-		"dev:server": "bun run --hot server/index.ts --config tsconfig.server.json",
-		"build:server": "bun build server/index.ts --config tsconfig.server.json",
-		"start:server": "bun start server/index.ts --config tsconfig.server.json",
-		"dev:client": "bunx --bun astro dev --config tsconfig.client.json",
-		"build:client": "bunx --bun astro build --output build --config tsconfig.client.json",
-		"preview:client": "bunx --bun astro preview --config tsconfig.client.json",
-		"astro:client": "bunx --bun astro --config tsconfig.client.json",
+		"client:dev": "bunx --bun astro dev --config tsconfig.client.json",
+		"client:build": "bunx --bun astro build --output build --config tsconfig.client.json",
+		"client:preview": "bunx --bun astro preview --config tsconfig.client.json",
+		"client:astro": "bunx --bun astro --config tsconfig.client.json",
+		"server:dev": "bun run --hot server/index.ts --config tsconfig.server.json",
+		"server:build": "bun build server/index.ts --config tsconfig.server.json",
+		"server:start": "bun start server/index.ts --config tsconfig.server.json",
 		"db:generate": "bun drizzle-kit generate",
 		"db:migrate": "bun drizzle-kit migrate",
 		"db:push": "bun drizzle-kit push",
 		"db:pull": "bun drizzle-kit pull",
 		"db:check": "bun drizzle-kit check",
-		"db:up": "bun drizzle-kit up",
+		"db:update": "bun drizzle-kit up",
 		"db:studio": "bun drizzle-kit studio"
 	},
 	"dependencies": {
 		"@hono/sentry": "^1.2.0",
 		"@hono/zod-validator": "^0.4.1",
 		"@neondatabase/serverless": "^0.10.4",
-		"add": "^2.0.6",
 		"astro": "^5.0.1",
 		"drizzle-orm": "^0.37.0",
 		"drizzle-zod": "^0.5.1",
